--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -43,7 +43,7 @@ server {
 
     # Vite reverse proxy setup
     location /vite/ {
-        proxy_pass http://node:5173/;
+        proxy_pass http://vite:5173/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
